--- a/css/styles.css
+++ b/css/styles.css
@@ -10183,6 +10183,7 @@ header.masthead .masthead-heading {
   max-width: 25rem;
   margin-left: auto;
   margin-right: auto;
+  transition: all 0.5s ease;
 }
 #portfolio .portfolio-item .portfolio-link {
   position: relative;
@@ -10508,5 +10509,8 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 .parent-circle-service:hover >.circle-service-hover {
   transform:rotateY(360deg);
+}
+.scale{
+  transform: scale(1.2);
 }
 
